@@ -28,6 +28,8 @@ New Features for 3.19.1
 [2881604] Allow edit of base entry of a shortcut via the Edit menu and/or
 by right-clicking on a shortcut entry.
 [2872273] Improve Import Text 'Line skipped' message.
+[] Add highlighting of added/changed and deleted records.  The latter can
+only be viewed via a filter or the supplied menu item (under View menu).
 
 Changes to Existing Features in 3.19.1
 ======================================
